@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dockerfile.maven.version>1.4.0</dockerfile.maven.version>
-        <java.version>1.8</java.version>
+        <java.version>1.9</java.version>
         <javafaker.version>0.14</javafaker.version>
     </properties>
 
@@ -36,6 +36,10 @@
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -96,6 +100,12 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-modules java.base</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
